# tailscale-localapi

./: .gitignore  README.md  pyproject.toml
tailscale_localapi/: __init__.py  api.py
tailscale_localapi/_util/: error.py  sock.py
tailscale_localapi/v0/: __init__.py  api.py  config.py  peers.py
